Movie class updated 1.0

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,9 @@
                             <noManPages>true</noManPages>
                             <stripDebug>true</stripDebug>
                             <noHeaderFiles>true</noHeaderFiles>
+                            <includes>
+                                <include>HomeControllerTest.java</include>
+                            </includes>
                         </configuration>
                     </execution>
                 </executions>
